[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
near-workspaces = { version = "0.9", default-features = false }
owo-colors = "4"
primitive-types = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"

[workspace.dependencies.near-contract-standards]
version = "=5.0.0-alpha.1"
git = "https://github.com/near/near-sdk-rs.git"
rev = "13430592a7be246dd5a29439791f4081e0107ff3"

[workspace.dependencies.near-sdk]
version = "=5.0.0-alpha.1"
default-features = false
features = ["unit-testing", "unstable", "legacy"]
git = "https://github.com/near/near-sdk-rs.git"
rev = "13430592a7be246dd5a29439791f4081e0107ff3"

[profile]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.test.package.'*']
codegen-units = 1
opt-level = 1
