[package]
name = "skyward"
version = "0.1.0"
authors = [
  "Spensa Nightshade <dev@skyward.finance>",
  "Mario Reder <mario.reder@pm.me>",
]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
primitive-types.workspace = true
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
anyhow.workspace = true
near-workspaces.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
